--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -6,7 +6,7 @@ this.page.identifier = '{{ page.url | absolute_url }}';
 };
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https-byeonghyeonjeon-github-io-1.disqus.com/embed.js';
+s.src = 'http://https-byeonghyeonjeon-github-io-1.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
