--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -17,5 +17,6 @@ s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
+<script id="dsq-count-scr" src="//bhjeon.disqus.com/count.js" async></script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
                             
