--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,9 @@ layout: default
 <header>
   <h1 class="page-title">{{ page.title }}</h1>
 </header>
+<body>
 <div class="content">
   {{ content }}
 </div>
+<script id="dsq-count-scr" src="//bhjeon.disqus.com/count.js" async></script>  
+</body>
