--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,13 @@ layout: default
 </header>
 <div class="content">
   {% include post-meta.html post=page %}
+  
+  <p class="post-meta">
+    {{ page.date | date: "%b %d, %Y" }} by {{ site.author }}
+    {% if page.comments %}
+        - <a href="{{ site.url }}{{ page.url }}#disqus_thread">Link</a>
+    {% endif %}
+  </p>
 
   <div class="post-body">
     {{ content }}
