--- a/_includes/category-links.html
+++ b/_includes/category-links.html
@@ -5,8 +5,14 @@
 {% for node in pages_list %}
   {% if node.title != null %}
     {% if node.layout == "category" %}
-      <a class="category-link {% if page.url == node.url %} active{% endif %}"
-          href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
+      <details>
+        <summary>
+          <a class="category-link {% if page.url == node.url %} active{% endif %}"
+              href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
+         </summary>
+         <br>
+         Test
+        </details>
     {% endif %}
   {% endif %}
 {% endfor %}
