dropdown node.child Test

--- a/_includes/category-links.html
+++ b/_includes/category-links.html
@@ -7,11 +7,11 @@
     {% if node.layout == "category" %}
       <details>
         <summary>
-          Test
+          {{ node.title }}
          </summary>
          <br>
          <a class="category-link {% if page.url == node.url %} active{% endif %}"
-              href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
+              href="{{ site.baseurl }}{{ node.url }}">{{ node.child }}</a>
          
         </details>
     {% endif %}
