&emsp; one more

--- a/_includes/category-links.html
+++ b/_includes/category-links.html
@@ -11,7 +11,7 @@
               href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>          
          </summary>         
          <a class="category-link {% if page.url == node.url %} active{% endif %}"
-              href="{{ site.baseurl }}{{ node.url }}">&emsp;{{ node.child }}</a>         
+              href="{{ site.baseurl }}{{ node.url }}">&emsp;&emsp;{{ node.child }}</a>         
         </details>
     {% endif %}
   {% endif %}
