child없을 경우 하위로 설정 조건 추가

--- a/_includes/category-links.html
+++ b/_includes/category-links.html
@@ -9,10 +9,12 @@
         <summary>
               <a class="category-link {% if page.url == node.url %} active{% endif %}"
               href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>          
-         </summary>         
+         </summary>
+        {% if node.child != null %}
          <a class="category-link {% if page.url == node.url %} active{% endif %}"
               href="{{ site.baseurl }}{{ node.url }}">&emsp;&emsp;{{ node.child }}</a>         
         </details>
+        {% endif %}
     {% endif %}
   {% endif %}
 {% endfor %}
